--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -40,14 +40,54 @@ body {
 
     }
     .dark-mode {
-        background-color: black;
+        
         color:whitesmoke;
-        background-image: none;
+        background-image: url("https://cdn.pling.com/img/5/a/b/1/0f8d724820d6f573a4b017a7dc7a887139a7.jpg")
     }
     #button1 {
-        background-color: black;
+        background-color:grey;
         color: white;
+        font-size: 10px;
+        border-radius: 12px;
+        margin-top:1%;
+
     }
+
+    .vertical-menu a {
+        color:whitesmoke; 
+        display:block;
+        padding: 12px;
+        text-decoration: none;
+        margin-bottom: 4%;
+    }
+    .vertical-menu a:hover {
+        background-color:whitesmoke;
+    }
+    .Social-media {
+        margin: 50px 0;
+        padding: 20px 0;
+        text-align: center;
+         text-decoration: none;
+         justify-content: center;
+         color:whitesmoke; 
+      }
+    .social li {
+        display: inline-block;
+        margin: 0 5px;
+      }
+
+    .Social-media p {
+        color:whitesmoke; 
+        text-align: center;
+        
+      }
+      a {
+          font-weight: bold;
+          text-decoration: none;
+          color:whitesmoke;
+      }
+        
+     
 
 
         
