--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -7,7 +7,7 @@ body {
     
    }
   
-      .welcome {
+      .rubrik {
       font-size: 5rem;
       color:whitesmoke;
       margin-top: -20rem;
@@ -37,12 +37,10 @@ body {
     .day,.hour,.minute,.second {
         font-size: 5rem;
         margin:auto;
-
     }
     .dark-mode {
-        
         color:whitesmoke;
-        background-image: url("https://cdn.pling.com/img/5/a/b/1/0f8d724820d6f573a4b017a7dc7a887139a7.jpg")
+        background-image: url("https://cdn.pling.com/img/5/a/b/1/0f8d724820d6f573a4b017a7dc7a887139a7.jpg");
     }
     #button1 {
         background-color:grey;
@@ -86,9 +84,26 @@ body {
           text-decoration: none;
           color:whitesmoke;
       }
-        
-     
+    
 
+    .right-column p{
+        position:absolute;
+        color:whitesmoke; 
+        font: size 20px;
+        right: 4%;
+        top: 60%;
+        }
+    
+        #icon{
+        size: 5px;
+        width: 50px;
+        height: auto;
+        position: absolute;
+        right: 0%;
+        display: block;
+        top: 60%; 
+        }
+    
 
         
     
